--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -301,6 +301,7 @@
                 <a href="#" class="nav-link">Tools <i class="fas fa-chevron-down"></i></a>
                 <div class="nav-dropdown">
                     <a href="/resume" class="dropdown-link">Resume Builder</a>
+                    <a href="/chat" class="dropdown-link" style="color: #0071e3; font-weight: 600;">AI Chat (New)</a>
                     <a href="/Certificate_Validator" class="dropdown-link">Certificate Validator</a>
                     <a href="/integrations" class="dropdown-link">Profile Analyzer</a>
                 </div>
@@ -361,6 +362,7 @@
     <div class="mobile-link-group">
         <div class="mobile-group-title">Tools</div>
         <a href="/resume" class="mobile-link">Resume Builder</a>
+        <a href="/chat" class="mobile-link" style="color: #0071e3; font-weight: 600;">AI Chat (New)</a>
         <a href="/Certificate_Validator" class="mobile-link">Certificate Validator</a>
         <a href="/integrations" class="mobile-link">Profile Analyzer</a>
     </div>
